# tint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake
include/Tint/: Atlas.hpp  AtlasGroup.hpp  Font.hpp  ShapedText.hpp  Shaper.hpp  Tint.hpp  TntFont.hpp  Types.hpp
licenses/: msdf-atlas-gen.txt
src/: Atlas.cpp  AtlasGroup.cpp  Font.cpp  Shaper.cpp  TntFont.cpp
tntutil/: CMakeLists.txt  main.cpp
